# embernet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: README.md  roadmap.md
docs/decisions/: README.md  adr-001-log-storage.md  adr-002-id-inventory-sync.md  adr-003-locked-durable-channel-appends.md  adr-004-rebuildable-message-index.md  adr-005-prefix-bucket-merkle-sync.md  adr-006-local-channel-write-acls.md  adr-007-signed-policy-event-chain.md  adr-008-prefix-only-policy-federation.md  adr-009-signed-moderation-overlay.md  adr-template.md
docs/protocol/: README.md  mcp.md  protocol.md
docs/research/: README.md  prior-art.md
src/: main.rs  mcp.rs  proto.rs  server.rs  store.rs  sync.rs  util.rs
