[package]
name = "embernet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
base64 = "0.22"
hex = "0.4"
fs2 = "0.4"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
